--- a/create_nft_swapx_polygon_live_v_3.html
+++ b/create_nft_swapx_polygon_live_v_3.html
@@ -1111,16 +1111,16 @@ await file.saveIPFS();
 
 // Save file reference to Moralis
 const jobApplication = new Moralis.Object("Applications");
-jobApplication.set("name", "Satoshi");
-jobApplication.set("resume", file);
+jobApplication.set("name", "Vitalik");
+jobApplication.set("_resume", file);
 await jobApplication.save();
 
 // Retrieve file
 const query = new Moralis.Query("Applications");
-query.equalTo("name", "Satoshi");
+query.equalTo("name", "Vitalik");
 query.find().then(function ([application]) {
-  const ipfs = application.get("resume").ipfs();
-  const hash = application.get("resume").hash();
+  const ipfs = application.get("_resume").ipfs();
+  const hash = application.get("_resume").hash();
   console.log("IPFS url", ipfs);
   console.log("IPFS hash", hash);
 });
