--- a/hack_ui.html
+++ b/hack_ui.html
@@ -1067,11 +1067,50 @@ query.equalTo("name", "john");
 query.find().then(function ([application]) {
   const ipfs = application.get("resume").ipfs();
   const hash = application.get("resume").hash();
+  loadJSON(ipfs, myData,'jsonp');
   console.log("IPFS url", ipfs);
   console.log("IPFS hash", hash);
 });
 
-		
+
+
+// loadJSON method to open the JSON file.
+function loadJSON(path, success, error) {
+  var xhr = new XMLHttpRequest();
+  xhr.onreadystatechange = function () {
+    if (xhr.readyState === 4) {
+      if (xhr.status === 200) {
+        success(JSON.parse(xhr.responseText));
+      }
+      else {
+        error(xhr);
+      }
+    }
+  };
+  xhr.open('GET', path, true);
+  xhr.send();
+}
+
+
+function myData(Data)
+{
+
+  // Output only the details on the first post
+  console.log(Data[0]);
+
+  // output the details of first three posts
+  //console.log("First three posts");
+  //for(var i=0; i<3; i=i+1)
+  //{
+    //console.log(Data[i]);
+  //} 
+  // output the id field of first five elements. 
+  //console.log("First five ID");
+  //for(var i=0; i<5; i=i+1)
+  //{
+    //console.log(Data[i].id);
+  //}
+}	
 		
 		
 		
