--- a/create_nft_swapx_polygon_live_v_3.html
+++ b/create_nft_swapx_polygon_live_v_3.html
@@ -1102,7 +1102,7 @@ const file_input = document.getElementById("fileInput");
 function submit_file(){
 var display = (async function(){
 
-var fname = document.getElementById("file_name").innerText;
+var fname = document.getElementById("file_name").innerHTML;
 var f_name = fname.trim();
 console.log(fname)
 
