--- a/hack_ui.html
+++ b/hack_ui.html
@@ -150,7 +150,7 @@ Imported.
 
 
 	
-<input type="button" value="SUBMIT" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="check_answers()()"/>	
+<input type="button" value="SUBMIT" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="check_answers()"/>	
 
 
 
