--- a/hack_ui.html
+++ b/hack_ui.html
@@ -73,7 +73,8 @@ display: none;
 
 <body>
 
-<h2 style="color:grey; font-family: Exo 2, sans-serif;"> H.I.T. Jobs </h2>
+<h2 style="color:grey; font-family: Papyrus;"> H.I.T. Jobs </h2>
+<p style="color:grey; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
 
 
 <p> Please carefully read the instructions: </p>
