--- a/hack_setup.html
+++ b/hack_setup.html
@@ -70,8 +70,10 @@ font-size: large;
 
 <body>
 
+<h2 style="color:grey; font-family: Papyrus;"> H.I.T. Jobs </h2>
+<p style="color:grey; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
 
-<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: 40px;  position:absolute; border: 15px solid orange; top:0.5; right:0;" onclick="open_window()">offer trade</button>
+
 <p>Please attach JSON file to populate questions on H.I.T. page</p>
 <input type="file" name="fileInput" id="fileInput"><br><br>
 <p>Please name your JSON file</p>
@@ -113,6 +115,7 @@ font-size: large;
 //https://unpkg.com/moralis/dist/moralis.js
 //https://unpkg.com/moralis-v1@latest/dist/moralis.js
 //<center><img id="logo" src=barterNFT_logo_1155.png></img></center>
+//<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: 40px;  position:absolute; border: 15px solid orange; top:0.5; right:0;" onclick="open_window()">offer trade</button>
 	  const serverUrl = "https://jgvwtbhpz221.usemoralis.com:2053/server";
       const appId = "jWYZTSxykRh5PsXRtoXPWu3coM5QDQAWJCwvXR51";
       Moralis.start({ serverUrl, appId });
