--- a/hack_setup.html
+++ b/hack_setup.html
@@ -73,6 +73,8 @@ font-size: large;
 <h2 style="color:grey; font-family: Papyrus;"> H.I.T. Jobs </h2>
 <p style="color:grey; font-family: Papyrus;">Blockchain-powered Human Intelligence Tasks - Earn Crypto!</p>
 
+<a href="https://bafybeifc6mfrl4toiftozt7qnv4wmpv5jt3ozhwxssj57b4h4cv2ctbw6m.ipfs.nftstorage.link/questions.json">JSON Question Template</a>
+
 
 <p>Please attach JSON file to populate questions on H.I.T. page</p>
 <input type="file" name="fileInput" id="fileInput"><br><br>
