--- a/hack_ui.html
+++ b/hack_ui.html
@@ -80,7 +80,7 @@ display: none;
 
 
 <p> Please carefully read the instructions: </p>
-<input type="text" name="instructions" id="instructions"><br><br>
+<p class='instruction' id="instructions"></p>	
 
 
 						
@@ -446,7 +446,7 @@ function myData(Data)
   // Output only the details on the first post
   console.log(Data["questions"][0]["question"]);
 //document.getElementById("image1").src = "https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
-  document.getElementById("instructions").innerHTML = Data["questions"][0]["instruction"];
+  document.getElementById("instructions").innerHTML = Data["questions"][0]["question"];
   document.getElementById("question1").innerHTML = Data["questions"][1]["question"];
   document.getElementById("question2").innerHTML = Data["questions"][2]["question"];
   document.getElementById("question3").innerHTML = Data["questions"][3]["question"];  
