--- a/hack_ui.html
+++ b/hack_ui.html
@@ -41,15 +41,9 @@ cursor: pointer;
 border: 1px solid gray;
 }
 
-#categorylist {
-margin-top: 6px;
-display: none;
-}
 
-#category122w1, #category122w2, #category122w3, #category122w4, #category122w5, #category122w6, #category122w7, #category122w8, #category122w9, #category122w10, #category122w11, #category122w12, #category122w13, #category122w14, #category122w15, #category122w16, #category122w17, #category122w18, #category122w19, #category122w20, #category122w21, #category122w22, #category122w23, #category122w24, #category122w25, #category122w26, #category122w27, #category122w28, #category122w29, #category122w30, #category122w31, #category122w32, #category122w33, #category122w34, #category122w35, #category122w36, #category122w37, #category122w38, #category122w39, #category122w40, #category122w41, #category122w42, #category122w43, #category122w44, #category122w45, #category122w46, #category122w47, #category122w48, #category122w49, #category122w50, #category122w51, #category122w52, #category122w53, #category122w54, #category122w55, #category122w56, #category122w57, #category122w58, #category122w59, #category122w60, #category122w61, #category122w62, #category122w63, #category122w64, #category122w65, #category122w66, #category122w67, #category122w68, #category122w69, #category122w70, #category122w71, #category122w72, #category122w73, #category122w74, #category122w75, #category122w76, #category122w77, #category122w78, #category122w79, #category122w80, #category1Z81, #category122w82, #category1Z83, #category1Z84, #category1Z85, #category2Z1, #category2Z2, #category2Z3, #category2Z4, #category2Z5, #category2Z6, #category2Z7, #category2Z8, #category2Z9, #category2Z10, #category2Z11, #category2Z12, #category2Z13, #category2Z14, #category2Z15, #category2Z16, #category2Z17, #category2Z18, #category2Z19, #category2Z20, #category2Z21, #category2Z22, #category2Z23, #category2Z24, #category2Z25, #category2Z26, #category2Z27, #category2Z28, #category2Z29, #category2Z30, #category2Z31, #category2Z32, #category2Z33, #category2Z34, #category2Z35, #category2Z36, #category2Z37, #category2Z38, #category2Z39, #category2Z40, #category2Z41, #category2Z42, #category2Z43, #category2Z44, #category2Z45, #category2Z46, #category2Z47, #category2Z48, #category2Z49, #category2Z50, #category2Z51, #category2Z52,
-#category2Z53, #category2Z54, #category2Z55, #category2Z56, #category2Z57, #category2Z58, #category2Z59, #category2Z60, #category2Z61, #category2Z62, #category2Z63, #category2Z64, #category2Z65, #category2Z66, #category2Z66, #category2Z67, #category2Z68, #category2Z69, #category2Z70, #category2Z71, #category2Z72, #category2Z73, #category2Z74, #category2Z75, #category2Z76, #category2Z77, #category2Z78, #category2Z79, #category2Z80, #category3Z2, #category3Z3, #category3Z4, #category3Z5, #category3Z6, #category3Z7, #category3Z8, #category3Z9, #category3Z10, #category3Z11, #category3Z12, #category3Z13, #category3Z14, #category3Z15, #category3Z16, #category3Z17, #category3Z18, #category3Z19, #category3Z20, #category3Z21, #category3Z22, #category3Z23, #category3Z24, #category3Z25, #category3Z26, #category3Z27, #category3Z28, #category3Z29, #category3Z30, #category3Z31, #category3Z32, #category3Z33, #category3Z34, #category3Z35, #category3Z36, #category3Z37, #category3Z38, #category3Z39, #category3Z40, #category3Z41, #category3Z42, #category3Z43, #category3Z44, #category3Z45, #category3Z46, #category3Z47, #category3Z48, #category3Z49, #category3Z50, #category3Z51, #category3Z52, #category3Z53, #category3Z54, #category3Z55, #category3Z56, #category3Z57, #category3Z58, #category3Z59, #category3Z60, #category3Z61, #category3Z62, #category3Z63, #category3Z64, #category3Z65, #category3Z66, #category3Z67, #category3Z68, #category3Z69, #category3Z70, #category3Z71, #category3Z72, #category3Z73, #category3Z74, #category3Z75, #category3Z76, #category3Z77, #category3Z78, #category3Z79, #category3Z80, #category2Z82 {
-display: none;
-}
+
+
 
 #closing {
 display: none;
@@ -84,7 +78,7 @@ display: none;
 
 
 						
-<img id="image1"></img>						
+<img id="image1" style="width=500px; height=600px"></img>						
 <p class='question' id="question1"></p>	
 <input type="text" id="answer1" style="color:grey; font-family: helvetica narrow, sans-serif; font-size:x-large;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:183; right:795;"></label>	
 
