--- a/hack_setup.html
+++ b/hack_setup.html
@@ -488,7 +488,7 @@ var display = (async function(){
 
 
 
-console.log(path);
+//console.log(path);
 
   //localStorage.setItem("mySharedData", document.getElementById("password").value);
     
